--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "classname": "0.0.0",
     "react": "^15.0.1",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.1",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "react-validation-mixin": "^5.3.4",
+    "react-validatorjs-strategy": "^0.1.10",
+    "validatorjs": "^2.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
